Archive2/40/dcd7dfcd4b3ddc/output
main.cpp:5:28: error: character too large for enclosing character literal type
  std::cout << std::hex << 'ø';
                           ^
main.cpp:6:28: error: character too large for enclosing character literal type
  std::cout << std::hex << '\u00F8';
                           ^
main.cpp:7:28: warning: multi-character character constant [-Wmultichar]
  std::cout << std::hex << '\xc3\xb8';
                           ^
1 warning and 2 errors generated.
